--- a/index.html
+++ b/index.html
@@ -6,18 +6,40 @@
   <meta name="robots" content="noai, noimageai">
   <title>Kassim Idris</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Kassim Idris</h1>
-    <p>Essays & Poetry</p>
-    <nav>
-      <a href="essays.html">Essays</a> |
-      <a href="poetry.html">Poetry</a>
-    </nav>
+    <p>A curated collection of essays & poetry</p>
   </header>
+
   <main>
-    <p>Welcome. This is a collection of essays and poetry by Kassim Idris. Feel free to explore.</p>
+    <section class="intro">
+      <p>Welcome to my little corner of the internet. Here you’ll find essays and poetry that reflect my thoughts, experiments, and reflections on life, identity, and the world around me.</p>
+    </section>
+
+    <section>
+      <h2>Essays</h2>
+      <ul>
+        <li><span class="meta">Identity & Belonging — Dec 2025</span> <a href="essays/my-first-essay.pdf" target="_blank">My First Essay</a></li>
+        <li><span class="meta">Urban Design Thoughts — Nov 2025</span> <a href="essays/another-essay.pdf" target="_blank">Another Essay</a></li>
+        <!-- Add more essays here -->
+      </ul>
+    </section>
+
+    <section>
+      <h2>Poetry</h2>
+      <ul>
+        <li><span class="meta">Morning Reflections — Oct 2025</span> <a href="poetry/my-first-poem.pdf" target="_blank">My First Poem</a></li>
+        <li><span class="meta">Sea & Sand — Sep 2025</span> <a href="poetry/another-poem.pdf" target="_blank">Another Poem</a></li>
+        <!-- Add more poems here -->
+      </ul>
+    </section>
   </main>
+
+  <footer>
+    <p>© Kassim Idris</p>
+  </footer>
 </body>
 </html>
