--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="robots" content="noai, noimageai">
   <title>Kassim Idris</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Kassim Idris</h1>
-    <p>A curated collection of essays & poetry</p>
+    <p>Essays & Poetry — quiet reflections & wandering thoughts</p>
   </header>
 
   <main>
     <section class="intro">
-      <p>Welcome to my little corner of the internet. Here you’ll find essays and poetry that reflect my thoughts, experiments, and reflections on life, identity, and the world around me.</p>
+      <p>Welcome. Here I collect essays and poems that drift across identity, memory, and landscapes both urban and natural. A calm space for thought, nostalgia, and subtle wonder.</p>
     </section>
 
     <section>
@@ -24,7 +24,6 @@
       <ul>
         <li><span class="meta">Identity & Belonging — Dec 2025</span> <a href="essays/my-first-essay.pdf" target="_blank">My First Essay</a></li>
         <li><span class="meta">Urban Design Thoughts — Nov 2025</span> <a href="essays/another-essay.pdf" target="_blank">Another Essay</a></li>
-        <!-- Add more essays here -->
       </ul>
     </section>
 
@@ -33,7 +32,6 @@
       <ul>
         <li><span class="meta">Morning Reflections — Oct 2025</span> <a href="poetry/my-first-poem.pdf" target="_blank">My First Poem</a></li>
         <li><span class="meta">Sea & Sand — Sep 2025</span> <a href="poetry/another-poem.pdf" target="_blank">Another Poem</a></li>
-        <!-- Add more poems here -->
       </ul>
     </section>
   </main>
