--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
   <header>
     <h1>Kassim Idris</h1>
-    <p>Essays & Poetry — quiet reflections & wandering thoughts</p>
+    <p>Essays & Poetry — warm thoughts, tactile reflections</p>
   </header>
 
   <main>
     <section class="intro">
-      <p>Welcome. Here I collect essays and poems that drift across identity, memory, and landscapes both urban and natural. A calm space for thought, nostalgia, and subtle wonder.</p>
+      <p>Welcome. These essays and poems are a reflection of movement, warmth, and thought—a space that feels lived-in, tactile, and alive with color.</p>
     </section>
 
     <section>
