--- a/index.html
+++ b/index.html
@@ -11,28 +11,42 @@
 <body>
   <header>
     <h1>Kassim Idris</h1>
-    <p>Essays & Poetry — warm thoughts, tactile reflections</p>
+    <p>Essays & Poetry — tactile reflections</p>
   </header>
 
   <main>
     <section class="intro">
-      <p>Welcome. These essays and poems are a reflection of movement, warmth, and thought—a space that feels lived-in, tactile, and alive with color.</p>
+      <p>Welcome. This space collects essays and poems that wander across memory, identity, and landscapes. A tactile, warm space with layers of color and texture, designed to feel alive.</p>
     </section>
 
-    <section>
+    <section class="grid">
       <h2>Essays</h2>
-      <ul>
-        <li><span class="meta">Identity & Belonging — Dec 2025</span> <a href="essays/my-first-essay.pdf" target="_blank">My First Essay</a></li>
-        <li><span class="meta">Urban Design Thoughts — Nov 2025</span> <a href="essays/another-essay.pdf" target="_blank">Another Essay</a></li>
-      </ul>
+      <div class="cards">
+        <div class="card">
+          <div class="card-meta">Identity & Belonging — Dec 2025</div>
+          <a href="essays/my-first-essay.pdf" target="_blank">My First Essay</a>
+        </div>
+        <div class="card">
+          <div class="card-meta">Urban Design Thoughts — Nov 2025</div>
+          <a href="essays/another-essay.pdf" target="_blank">Another Essay</a>
+        </div>
+        <!-- More essay cards -->
+      </div>
     </section>
 
-    <section>
+    <section class="grid">
       <h2>Poetry</h2>
-      <ul>
-        <li><span class="meta">Morning Reflections — Oct 2025</span> <a href="poetry/my-first-poem.pdf" target="_blank">My First Poem</a></li>
-        <li><span class="meta">Sea & Sand — Sep 2025</span> <a href="poetry/another-poem.pdf" target="_blank">Another Poem</a></li>
-      </ul>
+      <div class="cards">
+        <div class="card">
+          <div class="card-meta">Morning Reflections — Oct 2025</div>
+          <a href="poetry/my-first-poem.pdf" target="_blank">My First Poem</a>
+        </div>
+        <div class="card">
+          <div class="card-meta">Sea & Sand — Sep 2025</div>
+          <a href="poetry/another-poem.pdf" target="_blank">Another Poem</a>
+        </div>
+        <!-- More poetry cards -->
+      </div>
     </section>
   </main>
 
